--- a/src/projects/detail/components/timeline/milestones/MilestoneTypeFinalDesigns/MilestoneTypeFinalDesigns.scss
+++ b/src/projects/detail/components/timeline/milestones/MilestoneTypeFinalDesigns/MilestoneTypeFinalDesigns.scss
@@ -135,6 +135,7 @@
         position: absolute;
         top: 0;
         width: 4 * $base-unit;
+        z-index: 4;
       }
     }
   }
